Update app to ensure the swipe gesture works on mobile - an issue with overflow-x on the body on mobile browsers was causing the issue

--- a/plant-react-app/src/App.css
+++ b/plant-react-app/src/App.css
@@ -1,4 +1,4 @@
-body {
+#app {
   overflow-x: hidden;
   font-weight: 300;
   background-color: white;
@@ -12,7 +12,7 @@ body {
 .page {
   min-width: 100%;
   min-height: 100vh;     
-  transform: translate(calc(var(--pageIndex)*-100%));
+  transform: translate(calc(var(--pageIndex) * -100% )); 
   transition-duration: 50ms;
 }
 
